chore: switch links to .tech tld

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
    url: https://ipfs.io/help
    about: All information about how and where to get help on IPFS
  - name: IPFS Official Forum
-   url: https://discuss.ipfs.io
+   url: https://discuss.ipfs.tech
    about: For general questions, support requests and discussions
